@@ -1,0 +1,3 @@
+config/database.yml
+db/*.db
+log/*.log
